# autonomys-metadata

./: .eslintrc.js  .gitignore  404.html  Dockerfile  Makefile  NOTICE  README.md  config-template.toml  config.toml  config_dev.toml  data.json  index.html  next.config.ts  package.json  rust-toolchain.toml  rustfmt.toml
.github/: dependabot.yml  get_actual_path.sh
.github/workflows/: deploy.yml  frontend-test.yml  update-and-sign.yml  update-chains-file.yml  update.yml  verify.yml
.github/workflows/commit-changes/: action.yml
.github/workflows/deploy/: action.yml
.github/workflows/make-pull-request/: action.yml
.github/workflows/rust-install/: action.yml
.github/workflows/setup-env/: action.yml
404/: index.html
_next/static/css/: 75bef72eec2088ed.css
cli/: Cargo.toml  README.md
cli/src/: config.rs  export.rs  fetch.rs  file.rs  main.rs  opts.rs  qrs.rs  source.rs
cli/src/chains_config/: mod.rs
cli/src/cleaner/: file.rs  mod.rs
cli/src/cleaner/for_tests/test1/: data.json
cli/src/cleaner/for_tests/test2/: data.json
cli/src/cleaner/for_tests/test5/: data.json
cli/src/collector/: export.rs  mod.rs
cli/src/collector/for_tests/: expected.json
cli/src/common/: mod.rs  path.rs  types.rs
cli/src/signer/: mod.rs
cli/src/updater/: generate.rs  mod.rs
cli/src/verifier/: qr.rs
components/: ChainData.tsx  DisplayQr.tsx  PolkadotVault.tsx
pages/: _app.tsx  index.tsx
public/: data.json  portals.json
public/qr/: acala_metadata_2170.apng  acala_metadata_2180.apng  acala_metadata_2200.apng  acala_metadata_2210.apng  acala_metadata_2220.apng  acala_metadata_2230.apng  ajuna_metadata_1.apng  ajuna_metadata_119.apng  ajuna_metadata_120.apng  ajuna_metadata_203.apng  aleph-node_metadata_14000000.apng  aleph-node_metadata_61.apng  aleph-node_metadata_64.apng  aleph-node_metadata_65.apng  aleph-node_metadata_68.apng  aleph-node_metadata_72.apng  aleph-node_metadata_73.apng  aleph-node_metadata_74.apng  altair_metadata_1026.apng  altair_metadata_1027.apng  altair_metadata_1034.apng  amplitude_metadata_10.apng  amplitude_metadata_11.apng  amplitude_metadata_12.apng  amplitude_metadata_13.apng  amplitude_metadata_9.apng  appchain_metadata_2036.apng  astar_metadata_55.apng  astar_metadata_57.apng  astar_metadata_61.apng  astar_metadata_64.apng  astar_metadata_66.apng  astar_metadata_68.apng  astar_metadata_70.apng  astar_metadata_71.apng  astar_metadata_72.apng  astar_metadata_74.apng  astar_metadata_77.apng  astar_metadata_79.apng  astar_metadata_80.apng  (+1189 more)
qr/: autonomys_metadata_2.apng  autonomys_metadata_6.apng  taurus_evm_domain_0_metadata_3.apng  taurus_evm_domain_0_metadata_6.apng  taurus_metadata_20.apng
src/: index.tsx  scheme.ts  utils.ts
src/components/: App.tsx  Extension.tsx  Links.tsx  Network.tsx  NetworkAndPortalSelectMobile.tsx  NetworkSelect.tsx  Row.tsx  Sidebar.tsx
styles/: global.css
(+18 files in other folders)
