[package]
authors = ["Vedhavyas <vedhavyas.singareddi@gmail.com>"]
description = "Metadata portal for Autonomys"
edition = "2021"
homepage = "https://github.com/paritytech/metadata-portal"
keywords = ["substrate", "blockchain", "metadata", "signer"]
license = "MIT"
name = "metadata-cli"
readme = "README.md"
repository = "https://github.com/paritytech/metadata-portal"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
clap = {version = "4.1.14", features = ["derive", "env", "unicode", "cargo"]}
env_logger = "0.11.7"
log = "0.4"
toml = "0.8.20"
serde = { version = "1.0", features = ["derive"] }
definitions = {git = "https://github.com/novasamatech/parity-signer", rev = "020583b"}
generate_message = {git = "https://github.com/novasamatech/parity-signer", rev = "020583b"}
tempfile = "3.5"
sp-core = {git = "https://github.com/paritytech/substrate", default-features = false, features = ["full_crypto"]}
hex = "0.4"
serde_json = "1.0"
reqwest = { version = "0.12.15", features = ["json", "blocking"]}
png = "0.17.8"
# Hash table which preserves insertion order
indexmap = {version= "2.8.0", features=["serde"]}
frame-metadata = "16.0.0"
sp-version = {git = "https://github.com/paritytech/substrate"}
sp-runtime = {git = "https://github.com/paritytech/substrate"}
