[package]
authors = ["Vedhavyas <vedhavyas.singareddi@gmail.com>"]
description = "Metadata portal for Autonomys"
edition = "2021"
homepage = "https://github.com/paritytech/metadata-portal"
keywords = ["substrate", "blockchain", "metadata", "signer"]
license = "MIT"
name = "metadata-cli"
readme = "README.md"
repository = "https://github.com/paritytech/metadata-portal"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
clap = { version = "4.1.14", features = ["derive", "env", "unicode", "cargo"] }
definitions = { git = "https://github.com/novasamatech/parity-signer", rev = "2a706a2" }
env_logger = "0.11.7"
frame-metadata = "16.0.0"
generate_message = { git = "https://github.com/novasamatech/parity-signer", rev = "2a706a2" }
hex = "0.4"
# Hash table which preserves insertion order
indexmap = { version = "2.8.0", features = ["serde"] }
log = "0.4"
png = "0.17.13"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sp-core = { git = "https://github.com/paritytech/substrate", rev = "49734dd1d72a00b9d3b87ba397661a63e0e17af3", default-features = false, features = ["full_crypto"] }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "49734dd1d72a00b9d3b87ba397661a63e0e17af3" }
sp-version = { git = "https://github.com/paritytech/substrate", rev = "49734dd1d72a00b9d3b87ba397661a63e0e17af3" }
tempfile = "3.5"
toml = "0.8.20"

